--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 python-decouple
 gunicorn
+whitenoise==6.5.0
 annotated-types==0.7.0
 anthropic==0.75.0
 anyio==4.12.0
@@ -51,6 +52,7 @@ urllib3==2.5.0
 
 
 python-decouple
+
 
 
 
